template: best() as default

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -109,6 +109,8 @@ function SearchIfEnter(event) {
     return true;
 }
 //$('#search-input').keyup(SearchIfEnter(event));
+
+Best();
 </script>
 
 <script src="{% static 'test/commentBoard.js' %}"></script>
