template: make content inside container

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 
-<body style="margin-top:10px;width:90%;margin-left:5%">
+<body>
   <div class="navbar navbar-default">
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <div class="navbar-header">
@@ -46,9 +46,11 @@
       </ul>
     </div> <!-- .navbar-header -->
   </div> <!-- .navbar-collapse -->
-  <div id="showMsg">
-    {% include 'comments_best.html' %}
-  </div> <!-- /#showMsg -->
+  <div class="container">
+    <div id="showMsg">
+      {% include 'comments_best.html' %}
+    </div> <!-- /#showMsg -->
+  </div>
 </body>
 
 
