template: make navbar inside container

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -19,6 +19,7 @@
 
 <body>
   <div class="navbar navbar-default">
+  <div class="container">
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -45,6 +46,7 @@
         {% include 'auth/auth_all__li.html' %}
       </ul>
     </div> <!-- .navbar-header -->
+  </div> <!-- .container -->
   </div> <!-- .navbar-collapse -->
   <div class="container">
     <div id="showMsg">
