template/static: make a beautiful navbar

--- a/server/d1/vine_comment/templates/auth/auth_all__li.html
+++ b/server/d1/vine_comment/templates/auth/auth_all__li.html
@@ -19,5 +19,6 @@
 		 </ul>
 	 </li>
  {% else %}
-	 {% include 'auth/auth_modal.html' %}
+	 <li><a href="#" data-toggle="modal" data-target="#loginModal">登录</a></li>
+	 <li><a href="#" data-toggle="modal" data-target="#registerModal">注册</a></li>
  {% endif %}
