--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -9,6 +9,9 @@
 <link href="{% static 'test/comment_styles.css' %}" rel="stylesheet"/>
 <link href="{% static 'font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet"/>
 <link href="{% static 'twitter-bootstrap/3.0.3/css/bootstrap.min.css' %}" rel="stylesheet"/>
+<link href="{% static 'css/navbar.css' %}" rel="stylesheet"/>
+<link href="{% static 'css/navbar_dwarf.css' %}" rel="stylesheet"/>
+<link href="{% static 'css/home.css' %}" rel="stylesheet"/>
 <style>
  .subjects .nav li div {
  display: table-cell;
@@ -18,17 +21,20 @@
 </head>
 
 <body>
-  <div class="navbar navbar-default">
+  <div class="navbar-xs">
+  <div class="navbar-primary">
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
+    
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Vine comments</a>
-      </div>
+        <a class="navbar-brand" href="/">藤蔓评论</a>
+      </div> <!-- .navbar-header -->
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#" data-toggle="tab" onclick="Best(this)">最优</a></li>
         <li><a href="#best" data-toggle="tab" onclick="Newest(this)">最新</a></li>
@@ -45,9 +51,14 @@
       <ul class="nav navbar-nav navbar-right">
         {% include 'auth/auth_all__li.html' %}
       </ul>
-    </div> <!-- .navbar-header -->
+    </div> <!-- .navbar-collapse -->
   </div> <!-- .container -->
-  </div> <!-- .navbar-collapse -->
+  </div>
+  </div> <!-- .navbar-primary -->
+  </div> <!-- .navbar-xs -->
+
+  {% include "auth/auth_modal.html" %}
+
   <div class="container">
     <div id="showMsg">
       {% include 'comments_best.html' %}
