template: refine css for padding

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -60,7 +60,7 @@
   {% include "auth/auth_modal.html" %}
 
   <div class="container">
-    <div id="showMsg">
+    <div id="showMsg" style="padding:10px;">
       {% include 'comments_best.html' %}
     </div> <!-- /#showMsg -->
   </div>
