--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -44,7 +44,7 @@
       </ul>
       <form class="navbar-form navbar-left" role="search" method="get" action="/search">
         <div class="form-group">
-          <input id="search-input" type="text" name="q" class="form-control" placeholder="Search" onkeypress="return SearchIfEnter(event)">
+          <input id="search-input" type="text" name="q" class="form-control" placeholder="搜索全站内容" onkeypress="return SearchIfEnter(event)">
         </div>
         <a href="#" onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></a>
       </form>
