--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -1,10 +1,17 @@
+{% load humanize %}
+{% load tags %}
+{% load i18n %}
+{% load crispy_forms_tags %}
 {% load staticfiles %}
-
 <html>
+
 <head>
 <link href="{% static 'test/comment_styles.css' %}" rel="stylesheet"/>
 <link href="{% static 'font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet"/>
 <link href="{% static 'twitter-bootstrap/3.0.3/css/bootstrap.min.css' %}" rel="stylesheet"/>
+<link href="{% static 'css/navbar.css' %}" rel="stylesheet"/>
+<link href="{% static 'css/navbar_dwarf.css' %}" rel="stylesheet"/>
+
 {% block head %}
 {% endblock %}
 </head>
@@ -18,7 +25,8 @@
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <script src="{% static 'test/commentBoard.js' %}"></script>
 <script src="{% static 'twitter-bootstrap/3.0.3/js/bootstrap.min.js' %}"></script>
-{% block foot %}
+<script src="{% static 'js/btoa.js' %}"></script>
+{% block footer %}
 {% endblock %}
 </body>
 </html>
