template: recall showMsg div to home.html

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -5,8 +5,12 @@
 {% endblock %}
 
 {% block content %}
+  <div class="container">
+    <div id="showMsg" style="padding:10px;">
+      {% include 'comments_best.html' %}
+    </div> <!-- /#showMsg -->
+  </div>
 {% endblock %}
-
 
 {% block footer %}
 
