template: add mobile support

--- a/server/d1/vine_comment/templates/auth/auth_all__li.html
+++ b/server/d1/vine_comment/templates/auth/auth_all__li.html
@@ -18,6 +18,9 @@
 		 <li><a href="/logout/">登出</a></li>
 		 </ul>
 	 </li>
+	 <li><a class="btn btn-inverse" href='#' data-toggle="tooltip" data-placement="bottom" title="登出">
+	   <i class="fa fa-sign-out" style="margin:2px;"></i>
+	 </a></li>
  {% else %}
 	 <li><a href="#" data-toggle="modal" data-target="#loginModal">登录</a></li>
 	 <li><a href="#" data-toggle="modal" data-target="#registerModal">注册</a></li>
