template: refine css to suit mobile

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container">
-    <div id="showMsg" style="padding:10px;">
+
+    <div id="showMsg" style="padding: 10px 0;">
       {% include 'comments_best.html' %}
     </div> <!-- /#showMsg -->
-  </div>
+
 {% endblock %}
 
 {% block footer %}
