static/template: add favicon and update homepage title

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -7,7 +7,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>藤蔓评论</title>
+  <title>藤蔓评论 - 最前沿的社会化评论社区</title>
+  <link href="{% static 'favicon/favicon.ico' %}" type="image/x-icon" rel="shortcut icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
