template/static: tuning css

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div id="showMsg" style="padding: 10px 0;">
+    <div id="showMsg">
       {% include 'comments_best.html' %}
     </div> <!-- /#showMsg -->
 
