--- a/server/d1/static/css/navbar.css
+++ b/server/d1/static/css/navbar.css
@@ -64,13 +64,13 @@ background-color: #77BAF8;
 	}
 }
 
-body { padding-top: 40px; }
+body { padding-top: 50px; }
 @media screen and (max-width: 768px) {
-    body { padding-top: 40px; }
+    body { padding-top: 50px; }
 }
 
 .navbar-form .form-group {
-	padding: 2 0 2 0;
+	padding: 2px 0 2px 0;
 }
 
 .form-control {
