--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -25,10 +25,9 @@
 </head>
 
 <body>
-<div class="container">
   <div class="navbar-xs">
   <div class="navbar-primary">
-  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     
       <div class="navbar-header">
@@ -62,6 +61,7 @@
 
   {% include "auth/auth_modal.html" %}
 
+<div class="container">
 <div class="panel panel-default">
   <div class="panel-body">
     Basic panel
