template: add basic panel and breadcrumb to home/best

--- a/server/d1/vine_comment/templates/comments_best.html
+++ b/server/d1/vine_comment/templates/comments_best.html
@@ -2,6 +2,11 @@
 <script src="{% static 'jquery/2.0.3/jquery.min.js' %}"></script>
 <script src="{% static 'js/comment_updown.js' %}"></script>
 
+<ol class="breadcrumb">
+  <li><a href="/">藤蔓评论</a></li>
+  <li class="active">最优</li>
+</ol>
+
 {% include 'comments_list.html' %}
 
 		<ul class='pagination'>
