--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -63,9 +63,7 @@
 
 <div class="container">
 <div class="panel panel-default">
-  <div class="panel-body">
-    Basic panel
-  </div>
+  <div class="panel-body"> 每日推荐  预留 </div>
 </div>
 
 {% block content %}
