--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -82,6 +82,66 @@
   <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+
+<script type="text/javascript">
+$(document).ready(function(){
+	if (!window.btoa) window.btoa = base64.encode;
+	$('body').append('<div id="vine_comment_iframe"></div>');
+	$.support.cors = true;
+	$('#vine_comment_iframe').load("/iframe/" + btoa(document.location));
+});
+function Best(me) {
+  $.get("/home/best")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
+function Newest(me) {
+  $.get("/home/newest")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
+function DayHot(me) {
+  $.get("/home/hot/1")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
+function WeekHot(me) {
+  $.get("/home/hot/7")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
+function MonthHot(me) {
+  $.get("/home/hot/30")
+   .done(function(data){
+        $('#showMsg').html(data);
+       });
+};
+function Search(me) {
+  $.get("/search/?q=" + document.getElementById('search-input').value)
+  .done(function(data) {
+    $('#showMsg').html(data);
+  });
+  return false;
+};
+function SearchIfEnter(event) {
+	//if (!event) { var event = window.event; }
+    //event.preventDefault();
+    var keypressed = event.keyCode || event.which;
+    if (keypressed == 13) {
+        Search(this);
+        return false;
+    }
+    return true;
+}
+//$('#search-input').keyup(SearchIfEnter(event));
+
+Best();
+</script>
+
 {% block footer %}
 {% endblock %}
 </body>
