template/view: showing tag in template now

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -37,7 +37,7 @@
       </div> <!-- .navbar-header -->
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#home" data-toggle="tab" onclick="Home(this)">首页</a></li>
+        <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li>
         <li class="active"><a href="#best" data-toggle="tab" onclick="Best(this)">最优</a></li>
         <li><a href="#newest" data-toggle="tab" onclick="Newest(this)">最新</a></li>
         <li><a href="#24-hours-hot" data-toggle="tab" onclick="DayHot(this)">今日最热</a></li>
