css: tuning label css

--- a/server/d1/static/css/base.css
+++ b/server/d1/static/css/base.css
@@ -7,3 +7,7 @@ h1, h2, h3, h4, h5, p, div, form {
 .breadcrumb {
   background: #FFFFFF;
 }
+.label {
+  padding: .1em .3em .15em;
+  font-weight: inherit;
+}
