--- a/server/d1/vine_comment/templates/comments/comment_detail_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_detail_view.html
@@ -1,8 +1,12 @@
 
-<h1>Comments</h1>
+<h1>Comment Detail</h1>
 
-<ul>
-  {% for comment in latest_comment_list %}
-    <li class="comment">{{ comment }}</li>
-  {% endfor %}
-</ul>
+title: {{ comment.title }}<br/>
+comment_str: {{ comment.comment_str }}<br/>
+desc: {{ comment.desc }}<br/>
+comment_board: {{ comment.comment_board }}<br/>
+author_ip: {{ comment.author_ip }}<br/>
+user: {{ comment.user }}<br/>
+up_users: {{ comment.up_users }}<br/>
+down_users: {{ comment.down_users }}<br/>
+tags: {%for tag in comment.tags%}{{ tag }},{%endfor%}<br/>
