--- a/server/d1/vine_comment/templates/comments/comment_detail_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_detail_view.html
@@ -1,5 +1,10 @@
+{% extends 'base.html' %}
 
-<h1>Comment Detail</h1>
+{% block content %}
+
+<div class="page-header">
+<h1>Comment Detail <small>{{comment.comment_board}}</small> </h1> 
+</div>
 
 title: {{ comment.title }}<br/>
 comment_str: {{ comment.comment_str }}<br/>
@@ -10,3 +15,5 @@ user: {{ comment.user }}<br/>
 up_users: {{ comment.up_users }}<br/>
 down_users: {{ comment.down_users }}<br/>
 tags: {%for tag in comment.tags%}{{ tag }},{%endfor%}<br/>
+
+{% endblock %}
