--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -30,19 +30,25 @@
   <div class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-        </button>
-        <a class="navbar-brand" href="/">藤蔓评论</a>
-      </div> <!-- .navbar-header -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+      </button>
+      <a class="navbar-brand" href="/">藤蔓评论</a>
+    </div> <!-- .navbar-header -->
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li>
         <li class="active"><a href="#best" data-toggle="tab" onclick="Best(this)">最优</a></li>
         <li><a href="#newest" data-toggle="tab" onclick="Newest(this)">最新</a></li>
-        <li><a href="#24-hours-hot" data-toggle="tab" onclick="DayHot(this)">今日最热</a></li>
-        <li><a href="#7-days-hot" data-toggle="tab" onclick="WeekHot(this)">7天最热</a></li>
-        <li><a href="#30-days-hot" data-toggle="tab" onclick="MonthHot(this)">30天最热</a></li>
+        <li class="dropdown subject-item">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <div class="subject-title">最热 <b class="caret"></b></div></a>
+          <ul class="dropdown-menu">
+            <li><a href="#24-hours-hot" data-toggle="tab" onclick="DayHot(this)">今日最多up</a></li>
+            <li><a href="#7-days-hot" data-toggle="tab" onclick="WeekHot(this)">7天最多up</a></li>
+            <li><a href="#30-days-hot" data-toggle="tab" onclick="MonthHot(this)">30天最多up</a></li>
+          </ul>
+        </li>
       </ul>
       <form class="navbar-form navbar-left" role="search" method="get" action="/search">
         <div class="form-group">
@@ -132,7 +138,7 @@ function Search(me) {
   return false;
 };
 function SearchIfEnter(event) {
-	//if (!event) { var event = window.event; }
+  //if (!event) { var event = window.event; }
     //event.preventDefault();
     var keypressed = event.keyCode || event.which;
     if (keypressed == 13) {
@@ -150,12 +156,12 @@ function SearchText(text) {
 //$('#search-input').keyup(SearchIfEnter(event));
 
 $(document).ready(function() {
-	if (!window.btoa) {
-	  window.btoa = base64.encode;
-	}
-	$('body').append('<div id="vine_comment_iframe"></div>');
-	$.support.cors = true;
-	$('#vine_comment_iframe').load("/iframe/" + btoa(document.location));
+  if (!window.btoa) {
+    window.btoa = base64.encode;
+  }
+  $('body').append('<div id="vine_comment_iframe"></div>');
+  $.support.cors = true;
+  $('#vine_comment_iframe').load("/iframe/" + btoa(document.location));
     Best('');
 });
 </script>
