add commentBoard.js to base.html otherwise up/down will not work

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -77,6 +77,16 @@
   {% include "auth/auth_modal.html" %}
 
 <div class="container">
+<!--
+<div class="alert-messages" id="message-drawer" style="opacity: 0; display: none; float:top">
+	<div class="message ">
+		<div class="message-inside">
+			<span class="message-text">吐槽成功！</span>
+			<a class="dismiss" href="#" style="display: none;">×</a>
+		</div>
+	</div>
+</div>
+-->
 <div class="panel panel-default">
   <div class="panel-body"> 每日推荐  预留 </div>
 </div>
