--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -8,5 +8,6 @@
 {% endblock %}
 
 {% block footer %}
+<script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
 <script src="{% static 'js/comment_updown.js' %}"></script>
 {% endblock %}
