--- a/server/d1/static/css/base.css
+++ b/server/d1/static/css/base.css
@@ -11,3 +11,27 @@ h1, h2, h3, h4, h5, p, div, form {
   padding: .1em .3em .15em;
   font-weight: inherit;
 }
+
+
+.block {
+position: relative;
+padding: 15px 15px 15px 15px;
+margin: 0 -15px 15px;
+background-color: #fafafa;
+box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+border-color: #e5e5e5 #eee #eee;
+border-style: solid;
+border-width: 1px 0;
+}
+
+@media (min-width: 768px) {
+.block {
+margin-left: 0;
+margin-right: 0;
+background-color: #fff;
+border-width: 1px;
+border-color: #ddd;
+border-radius: 4px 4px 0 0;
+box-shadow: none;
+}
+}
