--- a/server/d1/static/css/base.css
+++ b/server/d1/static/css/base.css
@@ -24,7 +24,14 @@ border-style: solid;
 border-width: 1px 0;
 }
 
+.block + .highlight {
+margin: -15px -15px 15px;
+border-radius: 0;
+border-width: 0 0 1px;
+}
+
 @media (min-width: 768px) {
+
 .block {
 margin-left: 0;
 margin-right: 0;
@@ -34,4 +41,13 @@ border-color: #ddd;
 border-radius: 4px 4px 0 0;
 box-shadow: none;
 }
+.block + .highlight {
+margin-top: -16px;
+margin-left: 0;
+margin-right: 0;
+border-width: 1px;
+border-bottom-left-radius: 4px;
+border-bottom-right-radius: 4px;
+}
+
 }
