add href '/logout/' to font-awesome logout button

--- a/server/d1/vine_comment/templates/auth/auth_all__li.html
+++ b/server/d1/vine_comment/templates/auth/auth_all__li.html
@@ -18,7 +18,7 @@
 		 <li><a href="/logout/">登出</a></li>
 		 </ul>
 	 </li>
-	 <li><a class="btn btn-inverse" href='#' data-toggle="tooltip" data-placement="bottom" title="登出">
+	 <li><a class="btn btn-inverse" href='/logout/' data-toggle="tooltip" data-placement="bottom" title="登出">
 	   <i class="fa fa-sign-out" style="margin:2px;"></i>
 	 </a></li>
  {% else %}
