--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -9,4 +9,7 @@
 
 {% block footer %}
 <script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
+<script type="text/javascript">
+Best();
+</script>
 {% endblock %}
