template: use commentBoard in base.html

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -103,6 +103,8 @@
 <script src="{% static 'js/btoa.js' %}"></script>
 <script src="{% static 'js/comment_updown.js' %}"></script>
 <script type="text/javascript">$('a').tooltip();</script>
+<!-- XXX: use popup_message in commentBoard.js -->
+<script type="text/javascript" src="{% static "test/commentBoard.js" %}"></script>
 
 <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/wysihtml5/0.3.0/wysihtml5.min.js"></script>
