css: tuning css for navbars color and container width

--- a/server/d1/static/css/base.css
+++ b/server/d1/static/css/base.css
@@ -12,6 +12,9 @@ h1, h2, h3, h4, h5, p, div, form {
   font-weight: inherit;
 }
 
+.container {
+max-width: 1000px;
+}
 
 .block {
 position: relative;
