css: tuning color

--- a/server/d1/static/css/navbar.css
+++ b/server/d1/static/css/navbar.css
@@ -48,7 +48,7 @@ background-color: #23D338;
 	color: #ffffff;
 }
 .navbar-default .navbar-link:hover {
-	color: #7db4f0;
+	color: #23D338;
 }
 
 @media (max-width: 767px) {
