--- a/server/d1/static/test/comment_styles.css
+++ b/server/d1/static/test/comment_styles.css
@@ -34,7 +34,7 @@ color:#000000;
 }
 
 #boardLeft:hover{
-background:#00ff00;
+background: #24BE37;
 }
 /* #boardLeft:hover, #boardLeft:focus, #boardLeft a:focus, #boardLeft a:hover {
 	background:#000011;
