--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -13,7 +13,7 @@
     {% for message in p_comment.object_list %}
       <li class="list-group-item">
         <span style="float:right">
-          <a href="#" id="up_comment_{{message.id}}" onclick="up('{{message.id}}')">
+          <a href="#" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
             {% if user.id in message.up_users %}
             <i class="fa fa-thumbs-up"></i>
             {% else %}
@@ -21,11 +21,11 @@
             {% endif %}
             +<span>{{ message.up_users|length }}</span>
           </a>
-          <a href="#" id="reply_comment_{{message.id}}" onclick="expandReply('{{message.id}}')">
+          <a href="#" id="reply_comment_{{message.id}}" onclick="expandReply('{{message.id}}');return false;">
             <i class="fa fa-comments-o"></i>
             <span>{{ message.replies|length }}</span>
           </a>
-          <a href="#" id="down_comment_{{message.id}}" onclick="down('{{message.id}}')">
+          <a href="#" id="down_comment_{{message.id}}" onclick="down('{{message.id}}');return false;">
             {% if user.id in message.down_users %}
             <i class="fa fa-thumbs-down fa-flip-horizontal"></i>
             {% else %}
@@ -44,7 +44,7 @@
          <span id='comment_time'>提交于 {{ message.time_added|naturaltime }}</span>
          <span>
            {%for tag in message.tags%}
-           <a href="#" onclick="SearchText('{{tag}}')"><span class="label label-default">{{tag}}</span></a>
+           <a href="#" onclick="SearchText('{{tag}}');return false;"><span class="label label-default">{{tag}}</span></a>
            {%endfor%}
          </span>
          <br>
