template: make search page more friendly

--- a/server/d1/vine_comment/templates/search/search.html
+++ b/server/d1/vine_comment/templates/search/search.html
@@ -25,7 +25,7 @@
 {# 这个block是用于显示所有搜索结果的 #}
 <div class="block">
 {% if query %}
-  <h2>Results</h2>
+  <blockquote><p><strong>{{ query }}</strong> 的搜索结果</p></blockquote>
 
   {% for result in page.object_list %}
     <p>
